--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <h1>歡迎來到我的個人介紹網站</h1>
+    <h2>Welcome to my personal introduction website</h2>
     <img src="https://i.imgur.com/4QfKuz1.png" alt="我的照片">
     <p>你好，我是賴以宸。我是亞洲大學資工系的學生，目前致力於學習各式程式語言，平常的興趣是打桌球與運動健身，(目前只有想到這樣:D以後在繼續更新)</p>
     <button id="cheer" onclick="cheerMe()">為我加油</button>
